[package]
name = "gitmons"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "gitmons"
path = "src/lib.rs"

[[bin]]
name = "gitmons"
path = "src/main.rs"

[[bin]]
name = "watcher"
path = "src/watcher.rs"