[package]
name = "terminal-monsters"
version = "0.0.1"
edition = "2021"

[dependencies]
crossterm = "0.25"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
colored = "2.0"

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "terminal-monsters-app"
path = "src/main.rs"

[[bin]]
name = "terminal-monsters-worker"
path = "src/worker.rs"
